--- a/RemoteNotes/UI/RemoteNotes.UI.ViewModel/MainPage.xaml
+++ b/RemoteNotes/UI/RemoteNotes.UI.ViewModel/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:RemoteNotes.UI.Control"
-             x:Class="RemoteNotes.UI.Control.MainPage">
+             xmlns:local="clr-namespace:RemoteNotes.UI.ViewModel"
+             x:Class="RemoteNotes.UI.ViewModel.MainPage">
              
     <StackLayout>
         <!-- Place new controls here -->
