Launch and stop hubs on app

--- a/RemoteNotes.Client/RemoteNotes/UI/RemoteNotes.UI.Shell/App.xaml
+++ b/RemoteNotes.Client/RemoteNotes/UI/RemoteNotes.UI.Shell/App.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RemoteNotes.UI.Shell.App">
+<application:BaseApplication xmlns="http://xamarin.com/schemas/2014/forms"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                 xmlns:application="clr-namespace:RemoteNotes.UI.Shell.Application;assembly=RemoteNotes.UI.Shell"
+                 x:Class="RemoteNotes.UI.Shell.App">
     <Application.Resources>
 
     </Application.Resources>
-</Application>
+</application:BaseApplication>
