--- a/RemoteNotes.Client/RemoteNotes/UI/RemoteNotes.UI.Control/Notes/DashboardPage.xaml
+++ b/RemoteNotes.Client/RemoteNotes/UI/RemoteNotes.UI.Control/Notes/DashboardPage.xaml
@@ -12,7 +12,9 @@
     
     <Page.ToolbarItems>
         <ToolbarItem Text="New" Command="{Binding CreateNoteCommand}"/>
+        <ToolbarItem Text="Profile" Command="{Binding OpenProfileCommand}"/>
     </Page.ToolbarItems>
+    
     
         <RefreshView IsRefreshing="{Binding IsRefreshing}"
                      Command="{Binding RefreshCommand}">
